homecluster/geolin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: milestones
  namespace: geolin
  labels:
    app.kubernetes.io/name: milestones
    app.kubernetes.io/component: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: milestones
  template:
    metadata:
      labels:
        app.kubernetes.io/name: milestones
    spec:
      containers:
        - name: milestones
          image: ghcr.io/mathdepitmo/geolin-milestones:latest
          ports:
            - name: "http"
              containerPort: 8080
              protocol: "TCP"
          resources:
            limits:
              cpu: 1000m
              memory: 1G
            requests:
              cpu: 10m
              memory: 64Mi
      imagePullSecrets:
        - name: docker-secret
