homecluster/geolin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: milestones
  namespace: geolin
  labels:
    app.kubernetes.io/name: milestones
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - name: "http"
      port: 8080
      targetPort: "http"
      protocol: "TCP"
  selector:
    app.kubernetes.io/name: milestones
